# card

./: .env.example  .gitignore  Makefile  coding_standards.md  how_setenv  policy_any.txt  policy_debug.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/app/: main.py
api/app/routers/: bots.py  clawback.py  (+8 more)
api/tests/: conftest.py  test_api.py  test_generate_synth.py  test_parse_policy.py  test_parse_policy_upload.py  test_score.py  test_train.py
assets/: FORMENTON-COELHO Parenting Plan Original.docx  Travel_Expense_Policy.docx  openai_parse_response  travel_expense_policy.txt
diagrams/: architecture.mmd  components.mmd  dataflow.mmd
docs/: ADR-0001-db-choice.md  API_SPEC.md  APP_FLOW.md  ARCHITECTURE.md  BACKEND_PROGRESS.md  BDD_SPECS.md  CI_CD.md  CODING_STANDARDS.md  CONTRACT_TESTS.md  CONTRIBUTING.md  DATA_SCHEMA.md  DB_SCHEMA.md  DEMO_SCRIPT.md  ENVIRONMENT.md  FEATURE_FLAGS.md  GIT_WORKFLOW.md  MAKEFILE.md  POLICY_CHAT_RAG.md  PROMPTS.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SPEC_BACKEND_TDD.md  SPEC_FRONTEND_TDD.md  TEST_PLAN.md  TEST_STRATEGY_TDD.md  system_prompt.md
e2e/: happy-path.spec.ts  playwright.config.ts
postman/: FraudCompliance.postman_collection.json
prompt_logging/: PROMPT_LOGGING.md
scripts/: check_env.py  git-commit.sh  git-create-branch.sh  git-push.sh  git-rollback.sh  git-setup.sh  git-status.sh  insert_test_data.py  migrate_bot_names.py  test_create_bot.py  update_zsh_env.sh
web/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
web/src/: index.html  main.ts  styles.css
(+14 files in other folders)
